# rp2040

./: .clang-format  .gitignore  Makefile  compose.yml
container/: Dockerfile
program/: .clangd  .dir-locals.el  CMakeLists.txt
program/src/: main.cpp
script/: format_sources.sh  rmi_unused_images.sh
